[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/genericMushroom/genericMushroom.gd" type="Script" id=1]
[ext_resource path="res://resources/AssetsTst.png" type="Texture" id=2]

[sub_resource type="Animation" id=3]
resource_name = "squish"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.5, 3 ),
"transitions": PoolRealArray( 0.5, 0.5, -2, 2, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 3, 1 ), Vector2( 1, 3 ), Vector2( 2.25, 1.75 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.5, 3 ),
"transitions": PoolRealArray( 0.5, 0.5, -2, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 4 ), Vector2( 0, -4 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="genericMushroom" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="animationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 8.0
anims/squish = SubResource( 3 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 5
hframes = 5
frame = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="area2D" type="Area2D" parent="."]

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 2 )

[node name="twnAlpha" type="Tween" parent="."]
[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
